completed basic design

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -6,7 +6,7 @@
 				{% for page in site.pages %} {% if page.title %}
 				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
-				<li><a href="{{ "/news" | prepend: site.baseurl }}">News</a></li>
+				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
 			</ul>
 			</li>
 			</ul>
@@ -14,6 +14,73 @@
 	</div>
 </aside>
 
-<carousel>
-</carousel>
- 
+
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+
+<div class="slideshow-container">
+
+	<div class="mySlides fade">
+	  <img src="assets/images/greg-nunes.jpg" style="width:100%">
+	  <div class="text"><a href="{{ '/about' | prepend: site.baseurl }}">Merry-Go-Round</a></div>
+	  <div class="subtitle"><a href="{{ '/about' | prepend: site.baseurl }}">Link me to a page!</a></div>
+	</div>
+
+	<div class="mySlides fade">
+	  <img src="assets/images/david-brooke-martin.jpg" style="width:100%">
+	  <div class="text">Merry-Go-Round</div>
+	  <div class="subtitle">This is the second slide</div>
+	</div>
+
+	<div class="mySlides fade">
+	  <img src="assets/images/zoey-tian.jpg" style="width:100%">
+	  <div class="text">Merry-Go-Round</div>
+	  <div class="subtitle">This is the third slide</div>
+	</div>
+
+	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+
+<br>
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+<script>
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
+</body>
+</html> 
