--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,13 +1,15 @@
 $content-width: 800px;
-$main: #19CCAA;
-$font-style: 'Open Sans', sans-serif;
+$main: #fff;
+$font-style: Calibri;
 $font-color: #262626;
 $link-color: #425469;
-$link-hover-color: $main;
-$heading-font: 'Muli', sans-serif;
+$link-hover-color: #828282;
+$heading-font: Calibri;
 $heading-font-color: #425469;
 $light: #E7EDF4;
-$header:  #1D1425;
+$header: #255C7D;
+$footer: #6e6e6e;
+$footer-border: #969696;
 
 *,
 *::before,
