--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>Created by <a href="http://lillworkspace.github.io">Lillian</p>
+	<p>Merry-Go-Round © 2019; Theme by Lillian</p>
 </footer>
