--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 				{% for page in site.pages %} {% if page.title %}
 				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
-				<li><a href="{{ "/news" | prepend: site.baseurl }}">News</a></li>
+				<li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
 			</ul>
 			</li>
 			</ul>
