test remove footer

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -4,12 +4,13 @@
 
 <body>
 	{% include carousel.html %}
+
 	<main>
 		<article>
 			{{ content }}
 		</article>
 	</main>
-	{% include footer.html %}
+<!--	{% include footer.html %}-->
 </body>
 
 </html>
